--- a/scene.yaml
+++ b/scene.yaml
@@ -11,6 +11,17 @@ sources:
 global:
     language: en
     language_text_source: "function() {\n    // Use preferred language label if available\n    return (global.language && feature['name:'+global.language]) || feature.name;\n}\n"
+
+fonts:
+    FiraGO:
+        - weight: 400
+          url: https://assets.vector.hereapi.com/fonts/FiraGO-Regular.ttf
+        - weight: 400
+        - style: italics
+          url: https://assets.vector.hereapi.com/fonts/FiraGO-Italic.ttf
+        - weight: 500
+          url: https://assets.vector.hereapi.com/fonts/FiraGO-Medium.ttf
+          
 scene:
     background:
         color: '#E8EEF1'
@@ -26,28 +37,44 @@ layers:
                     priority: 1
                     order: 10000
                     font: 
-                        family: Lato
+                        family: FiraGO
                         fill: [0.388, 0.443, 0.478, 1.00]
                         stroke:
                             color: white
                             width: 4
                         size: [[4, 15px], [8, 20px], [12, 22px]]
                         buffer: 5px
+        town-points:
+            filter: {kind: locality, kind_detail: town, $zoom: {max: 18}}
+            draw:
+                text: 
+                    text_source: global.language_text_source
+                    priority: 12
+                    order: 10000
+                    font: 
+                        family: FiraGo
+                        fill: [0.388, 0.443, 0.478, 1.00]
+                        stroke:
+                            color: white
+                            width: 4
+                        size: [[8, 14px], [12, 16px]]
+                        buffer: 5px
         neighborhoods:
-            filter: [{kind: [neighbourhood, macrohood], $zoom: {min: 11}}, {kind: microhood, $zoom: {min: 15}}]
+            filter: [{kind: [neighbourhood, macrohood], $zoom: {min: 11}}]
             draw:
                 text:
                     text_source: global.language_text_source
                     priority: 10
                     order: 999
                     font:
-                        family: Lato
+                        family: FiraGO
                         fill: [0.565, 0.647, 0.698, 1.00]
                         stroke:
                             color: white
-                            width: 4
-                        size: [[4, 10px], [8, 14px],[12, 14px]]
-                        buffer: 10px
+                            width: 3
+                        size: [[4, 10px], [8, 12px],[12, 12px]]
+                    buffer: 10px
+ 
     earth:
         data:
             source: omv
@@ -72,13 +99,20 @@ layers:
                 polygons:
                     order: function() { return feature.sort_rank; }
                     color: '#FFFEE2'
-        aerodome:
+        aerodrome:
             filter:
-                kind: aerodome
+                kind: aerodrome
             draw:
                 polygons:
                     order: function() { return feature.sort_rank; }
-                    color: black
+                    color: '#D7E2E8'
+        hospital:
+            filter:
+                kind: hospital
+            draw:
+                polygons:
+                    order: function() { return feature.sort_rank; }
+                    color: [1.000, 0.918, 0.984, 1.00]
 
     water:
         data: { source: omv }
@@ -108,7 +142,48 @@ layers:
                     width: [[3, 8000], [8, 1200], [10, 700], [12, 200],[14,50], [18, 30]]
                     outline:
                         color: [0.902, 0.902, 0.902, 1.00]
-                        width: [[8, 10], [18, 5]]
+                        width: [[8, 20], [18, 5]]
+            label:
+                filter:
+                    all:
+                    - $zoom: {min: 11}
+                draw:
+                    text:
+                        repeat_distance: 20px
+                        font:
+                            text_source: global.language_text_source
+                            family: FiraGo
+                            size: 12px
+                            priority: 1
+                            fill: [0.565, 0.647, 0.698, 1.00]
+                            stroke:
+                                color: white
+                                width: 3
+        major_road:
+            filter:
+                kind: major_road
+            draw:
+                lines:
+                    order: function() { return feature.sort_rank; }
+                    color: white
+                    width: [[8, 200], [12, 60], [18, 10]]
+            label:
+                filter:
+                    all:
+                    - $zoom: {min: 13}
+                draw:
+                    text:
+                        repeat_distance: 100px
+                        font:
+                            text_source: global.language_text_source
+                            family: FiraGo
+                            size: 12
+                            priority: 25
+                            fill:  [0.565, 0.647, 0.698, 1.00]
+                            stroke:
+                                color: white
+                                width: 3
+
         minor_road:
             filter:
                 kind: minor_road
@@ -123,9 +198,9 @@ layers:
         draw:
             polygons:
                 order: function() { return feature.sort_rank; }
-                color: '#E9EBEB'
+                color: [0.878, 0.878, 0.878, 1.00]
         3d-buildings:
-            filter: { $zoom: { min: 15 } }
+            filter: { $zoom: { min: 11 } }
             draw:
                 polygons:
                     extrude: function () { return feature.height > 20 || $zoom >= 16; }
